--- a/style.css
+++ b/style.css
@@ -55,9 +55,9 @@ input{
     flex-direction: column;
     align-items: center;
     height: 25vh;
-    
-   
   }
+
+
   
   #city, #temperature {
     font-weight: bold;
@@ -67,6 +67,7 @@ input{
     padding-top: 10px;
     display: flex;
     justify-content: space-around;
+    opacity: 0;
   }
   
   
