--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    font-family: 'Poppins' sans-serif;
+    font-family: 'Poppins' ;
 }
 
 input{
@@ -55,6 +55,7 @@ input{
     flex-direction: column;
     align-items: center;
     height: 25vh;
+    font-size: 25px;
   }
 
 
@@ -67,7 +68,7 @@ input{
     padding-top: 10px;
     display: flex;
     justify-content: space-around;
-    opacity: 0;
+    opacity: 1;
   }
   
   
